@@ -1,8 +1,7 @@
 package edu.fiuba.algo3.modelo.modificadores.ModificadorTurno;
 
-import edu.fiuba.algo3.modelo.Respuestas.Respuestas;
 import edu.fiuba.algo3.modelo.jugador.Jugador;
-import edu.fiuba.algo3.modelo.Respuestas.respuesta.Respuesta;
+import edu.fiuba.algo3.modelo.Respuesta.Respuesta;
 import edu.fiuba.algo3.modelo.modificadores.ModificadorPuntaje.ModificadorPuntaje;
 
 import java.util.ArrayList;
@@ -11,23 +10,27 @@ import java.util.List;
 public class AnuladorTurno implements ModificadorTurno {
 
     ModificadorPuntaje modificadorReferencia;
-    int cantidadLlamados;
     int cantidadCorrectas;
     List<Jugador> jugadoresProtegidos;
+    private int factorDeMultiplicacion;
 
     public AnuladorTurno(ModificadorPuntaje modificadorReferencia) {
         jugadoresProtegidos = new ArrayList<>();
         this.modificadorReferencia = modificadorReferencia;
+        cantidadCorrectas=0;
+        factorDeMultiplicacion =1;
     }
 
 
     @Override
-    public void modificarPuntajes(Respuestas respuestas) {
+    public void modificarPuntajes(List<Respuesta> respuestas) {
         for (Respuesta respuesta : respuestas) {
-            if ((jugadoresProtegidos.size() == 1) && (respuesta.perteneceA(jugadoresProtegidos.getFirst()))) {
-                respuesta.multiplicarPuntaje(1);
-            } else {
-                respuesta.multiplicarPuntaje(0);
+            if(respuesta.esCorrecta()) {
+                if (respuesta.perteneceA(jugadoresProtegidos.get(0))) {
+                    respuesta.multiplicarPuntaje(factorDeMultiplicacion);
+                } else {
+                    respuesta.multiplicarPuntaje(0);
+                }
             }
 
         }
@@ -35,18 +38,17 @@ public class AnuladorTurno implements ModificadorTurno {
 
     private void usarModificador(Jugador jugadorActivo) {
         jugadoresProtegidos.add(jugadorActivo);
-
+        if(jugadoresProtegidos.size()>1){
+            factorDeMultiplicacion =0;
+        }
     }
 
-    public void actualizar(ModificadorPuntaje modificadorPuntaje, Jugador jugadorActivo) {
+    public void usar(ModificadorPuntaje modificadorPuntaje, Jugador jugadorActivo) {
         jugadorActivo.usar(modificadorPuntaje);
         if (modificadorPuntaje.equals(modificadorReferencia)) {
             usarModificador(jugadorActivo);
         }
-
-
     }
-
 }
 
 
